# rustishka

./: .gitignore  Cargo.toml  ToDo.md
book/: Cargo.toml  commands.sh  shell.nix
book/src/: main.rs
leetcode/: Cargo.toml
leetcode/src/: main.rs  mod1.rs  mod10.rs  mod11.rs  mod12.rs  mod13.rs  mod14.rs  mod15.rs  mod16.rs  mod2.rs  mod3.rs  mod4.rs  mod5.rs  mod6.rs  mod7.rs  mod8.rs  mod9.rs
mandelbrot/: Cargo.toml  shell.nix
mandelbrot/src/: main.rs  nonparallel.rs  parallel.rs
modules/src/: local.rs  main.rs
modules/src/children/: daughter.rs  mod.rs  son.rs
rustishka/: Cargo.toml  Dockerfile  docker-compose.yml
rustishka/src/: main.rs
src/: main.rs
tests/src/: main.rs
